index.css
@font-face {
  font-family: "JetbrainsMono";
  src: url("JetBrainsMono-Regular.woff2") format("woff2");
}

:root {
	--popup-display: none;
}


.no-btn-style, .no-btn-style:focus {
	outline: none;
	background: transparent;
	border: 1px solid transparent;
}

.no-btn-style:active {
	outline: none;
	background: transparent;
	border: 1px solid grey;
}

.close-popup {
	font-weight: bold;
	font-size: 40px;
	text-align: right;
	color: black;
	cursor: pointer;
	padding: 10px;
}

.close-popup:hover {
	color: grey;
}

.post-popup-box {
	display: var(--popup-display);
	z-index: 1;
	position: fixed;
	overflow: auto;
	background-color: #EFEEEE;
	/* background-color: rgba(0, 0, 0, 0.5);*/


	/*  background: rgb(112,255,202);
background: linear-gradient(171deg, rgba(112,255,202,0.14183671689937138) 7%, rgba(0,0,0,0.8881924020305667) 100%);*/
	top: 0;
    bottom: 0;
    left: 0;
    right: 0;
	overflow-y: scroll !important;
}

.post-popup-inner {
	display: var(--popup-display);
	border-radius: 5px;
	background-color: #EFEEEE;

	margin: 20px auto 20px auto;

	padding: 25px;
	width: 60%;
	border: 1px solid black;
	/* box-shadow: 12px 12px 24px #353535, -12px -12px 24px #474747;*/
	/* box-shadow:  11px 11px 22px #b2aea9,
	 -11px -11px 22px #f0ece5;*/
	overflow: hidden;
}

.grid {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

pre {
	overflow-wrap: break-word;
}

code {
  background-color: #eee;
  border: 1px solid #999;
  border-radius: 10px;
  display: block;
  padding: 5px;
}

.post-title {
	padding: 5px;
}

.post-prev {
	font-size: 14px;
	color: grey;
}

.post-date {
	margin-top: 10px;
	color: grey;
}

.post-num {
	color: grey;
	font-weight: bold;
}

.arrow {
  display: inline-block;
  width: 15px;
  height: 15px;
  border-top: 2px solid #000;
  border-right: 2px solid #000;
  transform: rotate(135deg);
}

@keyframes slideInFromTop {
  0% {
    transform: translateY(-1em);
  }
  100% {
    transform: translateY(0);
  }
}

.post-title {
	/*margin-left: auto;
	margin-right: auto;*/
}

.post-line {
	width: 80%;
	height: 1px;
	color: grey;
	background-color: grey;
	border-radius: 15px;
}

.card {
	padding: 20px;
	border: 1px solid #FFF;
	box-shadow:  11px 11px 22px #b2aea9,
	 -11px -11px 22px #f0ece5;
	border-radius: 50px;
    display: inline-grid;
	/* min-width: 400px;*/
	max-width: 500px;
	margin: 10px;
	line-break: auto;
	max-inline-size: auto;
	font-size: 16px;
	/* animation: 1s ease-in-out 0s 1 slideInFromTop; */
}

.card-logo {
	width: 60px;
	border-radius: 50%;
}

.logo {
	margin: 30px 30px 0px 30px;
	padding: 15px;
}

.vertical-left {
	transform: rotate(90deg);
	transform-origin: left top 0;
	margin-left: 1.5em;
}

.btn {
	border: 1px solid #FFF;
	box-shadow:  11px 11px 22px #b2aea9,
	 -11px -11px 22px #f0ece5;
	border-radius: 50px;
	height: 50px;
	width: 130px;
	padding: 10px;
	margin-top:15px;
	margin-bottom: 15px;
	max-width: 200px;
	word-break: break-all;

	font-family: JetbrainsMono;
	font-size: 12px;
	cursor: pointer;
	transition: width 3s;
}

details > summary {
  list-style: none;
}
details > summary::-webkit-details-marker {
  display: none;
}

.green-button {
	background: rgb(255,255,255);
	background: linear-gradient(189deg, rgba(255,255,255,0.25672275746235995) 7%, rgba(0,74,24,0.2623249983587185) 100%);
}


.btn:hover {
	width: 150px;
}


.neonText {
  color: #fff;
  text-shadow:
      0 0 7px #fff,
      0 0 10px #fff,
      0 0 21px #fff,
      0 0 42px #0fa,
      0 0 82px #0fa,
      0 0 92px #0fa,
      0 0 102px #0fa,
      0 0 151px #0fa;
}

.neonText-red {
  color: #fff;
  text-shadow:
      0 0 7px #fff,
      0 0 10px #b22222,
      0 0 21px #b22222,
      0 0 42px #b22222,
      0 0 82px #b22222,
      0 0 92px #b22222,
      0 0 102px #b22222,
      0 0 151px #b22222;
}

@media only screen and (max-width: 800px) {
	.container {
		margin: 0;
		padding: 0;
		width: 90%;
		margin-left: auto;
		margin-right: auto;
	}
	.post-popup-inner {
		width: 85%;
	}
}

@media only screen and (min-width: 800px) {
	.container {
		border: 1px solid #FFF;
		box-shadow:  11px 11px 22px #b2aea9,
		 -11px -11px 22px #f0ece5;
		border-radius: 50px;
		margin: 10px;
		margin-left: auto;
		margin-right: auto;
		padding: 20px;
		max-width: 1500px;
		width: 75%;
	}
}

.blur {
	animation: blur 2s ease-in-out;
}

h1 {
  font-size: 4.2rem;
}


body {
  font-family: "JetbrainsMono";
  font-size: 18px;
  background-color: #EFEEEE
}  

details[open] summary ~ * {
  animation: sweep .5s ease-in-out;
}

@keyframes sweep {
  0%    {
	filter: blur(5px);
	margin-top: -15px;
  }
  100%  {
	filter: blur(0);
	margin-top:0px;
  }
}

@keyframes blur {
  0%    {
	filter: blur(5px);
  }
  100%  {
	filter: blur(0);
  }
}
summary {
	cursor: pointer;
}

footer {
	margin-top: 10px;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	width: 50%;
}

/* let us just ignore this */
.no-underline {
	border-bottom: 0px solid;
}

.no-underline:hover::after {
	border-bottom: 0px solid;
	width: 0;
}

.no-underline::after {
	width: 0;
	border-bottom: 0px solid;
}

a::after {
    content: '';
    display: block;
    width: 0;
    height: 3px;
    background: #3CCF4E;
    transition: width .3s;
	filter: blur(5px);
}

a:hover::after {
    width: 100%;
	filter: blur(5px)
}

a {
	color: black;
	display: inline-block;
}

